# open-australian-legal-corpus-creator

./: .gitignore  .isort.cfg  CHANGELOG.md  README.md  open_australian_legal_corpus_creator.py  pyproject.toml  requirements.txt
imports/south_australian_legislation/A/ANZ Executors and Trustee Company (South Australia) Limited (Transfer of Business) Act 1996/Current/: 1996.78.un.rtf
imports/south_australian_legislation/A/ANZAC Day Commemoration Act 2005/Current/: 2005.12.un.rtf
imports/south_australian_legislation/A/Aboriginal Heritage Act 1988/Current/: 1988.12.un.rtf
imports/south_australian_legislation/A/Aboriginal Lands Parliamentary Standing Committee Act 2003/Current/: 2003.24.un.rtf
imports/south_australian_legislation/A/Aboriginal Lands Trust Act 2013/Current/: 2013.81.un.rtf
imports/south_australian_legislation/A/Action for Breach of Promise of Marriage (Abolition) Act 1971/Current/: 1971.75.un.rtf
imports/south_australian_legislation/A/Adelaide Cemeteries Authority Act 2001/Current/: 2001.25.un.rtf
imports/south_australian_legislation/A/Adelaide Childrens Hospital and Queen Victoria Hospital (Testamentary Dispositions) Act 1990/Current/: 1990.86.un.rtf
imports/south_australian_legislation/A/Adelaide Dolphin Sanctuary Act 2005/Current/: 2005.5.un.rtf
imports/south_australian_legislation/A/Adelaide Festival Centre Trust Act 1971/Current/: 1971.93.un.rtf
imports/south_australian_legislation/A/Adelaide Festival Corporation Act 1998/Current/: 1998.73.un.rtf
imports/south_australian_legislation/A/Adelaide Festival Theatre Act 1964/Current/: 1964.45.un.rtf
imports/south_australian_legislation/A/Adelaide Oval Redevelopment and Management Act 2011/Current/: 2011.29.un.rtf
imports/south_australian_legislation/A/Adelaide Park Lands Act 2005/Current/: 2005.69.un.rtf
imports/south_australian_legislation/A/Adelaide Railway Station Development Act 1984/Current/: 1984.31.un.rtf
imports/south_australian_legislation/A/Adelaide Show Grounds (Regulations and By-laws) Act 1929/Current/: 1929.1905.un.rtf
imports/south_australian_legislation/A/Adelaide Workers Homes Act 2013/Current/: 2013.19.un.rtf
imports/south_australian_legislation/A/Administration and Probate Act 1919/Current/: 1919.1367.un.rtf
imports/south_australian_legislation/A/Administrative Arrangements Act 1994/Current/: 1994.3.un.rtf
imports/south_australian_legislation/A/Administrative Decisions (Effect of International Instruments) Act 1995/Current/: 1995.81.un.rtf
imports/south_australian_legislation/A/Adoption Act 1988/Current/: 1988.90.un.rtf
imports/south_australian_legislation/A/Advance Care Directives Act 2013/Current/: 2013.10.un.rtf
imports/south_australian_legislation/A/Aerodrome Fees Act 1998/Current/: 1998.45.un.rtf
imports/south_australian_legislation/A/Age of Majority (Reduction) Act 1971/Current/: 1971.15.un.rtf
imports/south_australian_legislation/A/Agent-General Act 1901/Current/: 1901.769.un.rtf
sources/: federal_court_of_australia.py  federal_register_of_legislation.py  nsw_legislation.py  queensland_legislation.py  south_australian_legislation.py  tasmanian_legislation.py  western_australian_legislation.py
src/oalc_creator/: __init__.py  cli.py  creator.py  css.py  custom_inscriptis.py  custom_mammoth.py  data.py  helpers.py  metadata.py  ocr.py  scraper.py
src/oalc_creator/scrapers/: __init__.py  federal_court_of_australia.py  federal_register_of_legislation.py  high_court_of_australia.py  nsw_caselaw.py  nsw_legislation.py  queensland_legislation.py  south_australian_legislation.py  tasmanian_legislation.py  western_australian_legislation.py
(+1009 files in other folders)
